# EwtP-SoSe25-TicTacToe

./: Konzept.md
.github/workflows/: ci.yml
Aufgabenstellung/: I_TicTacToeExtended.docx
firmware/: README.md
firmware/demo_neopixel_onboard/: Cargo.toml  README.md
firmware/demo_neopixel_onboard/src/: main.rs
firmware/demo_tic_tac_toe/: README.md
firmware/demo_tic_tac_toe/matlab_code/: Cargo.toml  build.rs
firmware/demo_tic_tac_toe/matlab_code/src/: lib.rs
firmware/demo_tic_tac_toe/mcu/: Cargo.toml  README.md
firmware/demo_tic_tac_toe/mcu/src/: game.rs  game_rendering.rs  main.rs  tinyusb_callbacks.rs
firmware/demo_usb_keyboard/: Cargo.toml  README.md  partitions.csv
firmware/demo_usb_keyboard/.cargo/: config.toml
firmware/demo_usb_keyboard/src/: main.rs  tinyusb_callbacks.rs
firmware/ultimate_tic_tac_toe/matlab_code/: build.rs
firmware/ultimate_tic_tac_toe/matlab_code/src/: lib.rs
firmware/ultimate_tic_tac_toe/mcu/: Cargo.toml  stub_doc.md
firmware/ultimate_tic_tac_toe/mcu/src/: game.rs  game_rendering.rs  main.rs  tinyusb_callbacks.rs
matlab/: .gitignore  final.m  gen_code.asv  gen_code.m  gen_code_tic_tac_toe.m  gen_code_ultimate_tic_tac_toe.m  mysum.m  test_tic_tac_toe.m  test_ultimate_tic_tac_toe.m  tic_tac_toe.m  tic_tac_toe_ui.m  ultimate_tic_tac_toe.m  ultimate_tic_tac_toe_logic.m  ultimate_tic_tac_toe_numpad.m
matlab/codegen/lib/tic_tac_toe/: all.c  all.h  flipud.c  flipud.h  rtwtypes.h  tic_tac_toe.c  tic_tac_toe.h  tic_tac_toe_data.h  tic_tac_toe_initialize.c  tic_tac_toe_initialize.h  tic_tac_toe_terminate.c  tic_tac_toe_terminate.h  tic_tac_toe_types.h
matlab/codegen/lib/ultimate_tic_tac_toe_logic/: all.c  all.h  diag.c  diag.h  flipud.c  flipud.h  ultimate_tic_tac_toe_logic.c  (+7 more)
matlab/include/: tmwtypes.h
